# automap

./: .gitignore  README.md  pyproject.toml
PODIO/scripts/: discursos_navidad.sh
automap/converters/: __init__.py  map2graph.py
automap/grapheval/: __init__.py  compute_metrics.py
automap/grapheval/metrics/: __init__.py  basic_metrics.py  domain_metrics.py  evaluator.py  object_metrics.py  property_metrics.py
automap/utils/: __init__.py  eval2tabular.py  eval2wandb.py  eval_extractor.py  printers.py  scores.py  visualizers.py
core/evaluation/: README.md  compute_metrics.py
core/evaluation/grapheval/: __init__.py  evaluator.py
core/evaluation/grapheval/metrics/: __init__.py  base.py  hierarchy.py  property_metrics.py
core/evaluation/grapheval/utils/: __init__.py  config.py  helpers.py
core/evaluation/grapheval/visualization/: __init__.py  plots.py
core/evaluation/tests/: README.md  generate_baseline.py  test_regression.py  test_regression_rdfeval.py
core/evaluation/tests/baselines/: baseline_gold2_pred.json  baseline_gold_pred.json
core/postproc/: README.md
core/postproc/src/: map2graph.py  map2rml.py  postprocess.py
core/postproc/src/utils/: __init__.py
datasets/PODIO/data/conversational/: conversational.csv  conversational_extra.json  conversational_metrics.json  gold_graph.nt  mapping.ttl  mapping.yml
datasets/PODIO/data/discursos_navidad/: discursos_navidad.csv  gold_graph.nt  mapping.ttl  mapping.yml
datasets/blinkg/data/: REPORTE.md
datasets/imbd/data/: config.yaml
resources/: exp_bin_template.sh
(+19 files in other folders)
