[project]
name = "automap"
version = "0.1.0"
description = "Automatic mappings generation proyect"
authors = [
    {name = "CarlosGolvano",email = "carlosgoolvin@gmail.com"}
]
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "rdflib (==7.0.0)",
    "pyyaml (==6.0.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
