[project]
name = "automap"
version = "0.1.0"
description = "Automatic mappings generation proyect"
authors = [
    {name = "CarlosGolvano",email = "carlosgoolvin@gmail.com"}
]
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "rdflib (>=7.2.1,<8.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "yatter (>=2.0.3,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
]

[tool.setuptools]
packages = ["automap"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
